Fix #25 - fix post title and meta data spacing

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -52,6 +52,7 @@
 .single .article--meta,
 .article--date {
   margin-top: 0;
+  margin-bottom: 0.25em;
 }
 
 .single .article--meta {
