--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -42,6 +42,7 @@
 
 .page--content .post--content h2 {
   margin-top: 0;
+  margin-bottom: 0.25em;
 }
 
 .single h2 {
